--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,22 +1,22 @@
 version: '3.8'
 services:
-  iris:
-    build:
-      context: .
-      dockerfile: IrisDockerfile
-    restart: always
-    command: --check-caps false --ISCAgent false
-    ports:
-      - 51773:1972
-      - 52773:52773
-      - 53773
-    volumes:
-    # - ~/iris.key:/usr/irissys/mgr/iris.key
-      - ./:/irisdev/app
-    networks:
-      - iris_network
-      - db_network
-      - web_network
+  # iris:
+  #   build:
+  #     context: .
+  #     dockerfile: IrisDockerfile
+  #   restart: always
+  #   command: --check-caps false --ISCAgent false
+  #   ports:
+  #     - 51773:1972
+  #     - 52773:52773
+  #     - 53773
+  #   volumes:
+  #   # - ~/iris.key:/usr/irissys/mgr/iris.key
+  #     - ./:/irisdev/app
+  #   networks:
+  #     - iris_network
+  #     - db_network
+  #     - web_network
   appmsw:
     container_name: appmsw
     restart: always
@@ -24,7 +24,7 @@ services:
     networks:
       - db_network
       - web_network
-      - iris_network
+      # - iris_network
   nginxs:
     container_name: nginxs
     restart: always
@@ -42,6 +42,6 @@ networks:
     driver: bridge
   web_network:
     driver: bridge
-  iris_network:
-    driver: bridge
+  # iris_network:
+  #   driver: bridge
  
