--- a/env.sample
+++ b/env.sample
@@ -4,6 +4,13 @@ SECRET_KEY=<STRONG_KEY_HERE>
 CSRF_TRUSTED_ORIGINS=http://192.168.1.66:5085
 DJANGO_SUPERUSER_PASSWORD=demo
 
+#DB_ENGINE=postgresql
+#DB_HOST=127.0.0.1
+#DB_NAME=dj-mvk
+#DB_USERNAME=postgres
+#DB_PASS=postgres
+#DB_PORT=5432
+
 # DB_ENGINE=mysql
 # DB_HOST=localhost
 # DB_NAME=appseed_db
