--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,8 @@ services:
     container_name: appmsw
     restart: always
     build: .
+    env_file:
+      - ./.env
     networks:
       - db_network
       - web_network
@@ -17,11 +19,10 @@ services:
       - ./nginx:/etc/nginx/conf.d
     networks:
       - web_network
-    depends_on: 
+    depends_on:
       - appmsw
 networks:
   db_network:
     driver: bridge
   web_network:
     driver: bridge
- 
